Fix: Header to not overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
+* {
+    /* border: solid red 1px; */
+    margin: 0;
+    padding: 0;
+    box-sizing: content-box;
+}
+
 body {
-    font-family: Roboto, sans-serif;
+    font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -11,7 +18,7 @@ body {
 }
 
 .one {
-    height: 480px;
+    padding: 20px 10%;
 }
 
 .footer {
@@ -26,7 +33,6 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 165px 0px;
 }
 
 .left-logo {
@@ -54,12 +60,12 @@ a,
 
 .front {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    height: 230px;
     gap: 50px;
-    padding: 100px;
-    /* border: solid red 2px; */
+    flex-wrap: wrap;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 .content {
@@ -101,15 +107,20 @@ button.button2 {
     border: solid #ffffff 2px;
 }
 
+.two {
+    padding-bottom: 150px;
+}
+
 .info-header {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     font-size: 36px;
     font-weight: 900;
     color: #1F2937;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
-img {
+.info img {
     width: 150px;
     /* background-color: #747474; */
     height: 150px;
@@ -121,10 +132,19 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .info {
     max-width: 200px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.text {
+    text-align: center;
 }
 
 
